# blumenplace-uc

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  README.md  tm4c123ge6pm.cmake  tm4c123ge6pm.cmd  tm4c123ge6pm.lds
.launches/: app.launch  blumenplace-uc.launch
src/: FreeRTOSConfig.h  alloc.c  cc120x.h  ccx.cc  ccx.h  ccx.hpp  ccx_hw.h  dma_dev.cc  dma_dev.h  dma_svc.h  gpio_intctrl.cc  gpio_intctrl.h  gpio_pin.h  gpio_port.h  hw_udma_tbl.h  main.c  main.cc  main_task.c  main_task.cc  main_task.h  rf.cc  rf.h  sht1x.c  sht1x.h  spi_dev.h  ssi_dev.cc  ssi_dev.h  ssi_svc.h  sys.c  sys.h  test.cc  test.h  tm4c123ge6pm_startup_ccs.c  tm4c123ge6pm_startup_gcc.c
src/arch/tm4c123/: udma_hw.c  udma_hw.h
src/arch/tm4c123g/: dma_svc_hw.c  ssi_svc_hw.c  ssi_svc_hw.h
targetConfigs/: Tiva TM4C123GE6PM.ccxml
